--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,43 +1,92 @@
 
-/*Temporary Styles*/
+/*General*/
 body {
   font-family: "ff-tisa-web-pro", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  max-width: 960px;
+  max-width: 1200px;
 }
 h1{
   font-size:3em;
   font-weight:400;
-  padding-bottom:0.5em;
+  padding-bottom:0.3em;
 }
 h2{
-  font-size:1.2em;
-  padding-bottom:0.5em;
+  font-size:1.1em;
+  line-height: 1.4em;
+  font-weight:700;
 }
-p{line-height:1.2em;}
-a{
-  color:#333;
+.subtitle{
+  padding-bottom:1.2em;
+  font-weight:400;
 }
-a:hover, a:visited{
-  color:#4545a9;
+h3{
+  font-weight:700;
 }
-ul {
-  list-style: none;
-}
-li {
-  display: block;
+p, ul{
   line-height:1.2em;
+  padding-bottom:1em;
+}
+a{
+  color:#000;
+}
+a:hover, {
+  color:#4545a9;
 }
 
 .container{
-  padding:200px;
+  padding:100px;
 }
-
+.section{
+  padding-top:1em;
+  max-width: 960px;
+  display: block;
+}
+.nav {
+  list-style: none;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+img {
+  max-width: 70%;
+  max-height:70%;
+}
+figcaption{
+  text-align: center;
+  padding-bottom:3em;
+}
+.img-icon{
+  width:20px;
+  height:20px;
+}
+.italics{
+  font-style: italic;
+}
+/*portfolio pages*/
+.small-title{
+  font-size:2em;
+  padding-top:0.6em;
+}
+.styled-list{
+  list-style: inside;
+  list-style-type:disc;
+}
+.bord {
+  padding:4px;
+  border: solid 0.5px #eee;
+}
+/*media queries*/
 @media only screen
    and (max-width : 768px) {
      .container{
        padding:20px;
+     }
+     img{
+       max-width:100%;
+       max-height:100%;
      }
 }
