--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,6 +85,9 @@ figcaption{
 /*media queries*/
 @media only screen
    and (max-width : 768px) {
+     body{
+       font-size:18px;
+     }
      .container{
        padding:20px;
      }
@@ -92,7 +95,15 @@ figcaption{
        max-width:100%;
        max-height:100%;
      }
-     body{
-       background-image: none;
+     .img-icon {
+       width:30px;
+       height:30px;
+       padding:5px;
      }
-}
+     h1{
+       font-size:2em;
+     }
+     li {
+       padding-bottom:.6em;
+     }
+
