--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 
 /*General*/
 body {
-  font-family: "ff-tisa-web-pro", serif;
+  font-family: "ff-tisa-web-pro", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -11,10 +11,6 @@ h1{
   font-size:2.5em;
   font-weight:400;
   padding-bottom:0.3em;
-}
-#parrot{
-  height:30px;
-  opacity: 0.9;
 }
 h2{
   font-size:1.1em;
@@ -35,7 +31,7 @@ p, ul{
 a{
   color:#000;
 }
-a:hover{
+a:hover, a:visited{
   color:#4545a9;
 }
 
