--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 
 /*General*/
 body {
-  font-family: "ff-tisa-web-pro", sans-serif;
+  font-family: 'Vollkorn', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -28,7 +28,7 @@ p, ul{
   line-height:1.2em;
   padding-bottom:1em;
 }
-a{  
+a{
   color:#00006B;
 }
 a:hover{
