--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  line-height:130%;
 }
 .row .col {
   padding-left:0;
@@ -13,30 +14,38 @@ body {
 h1{
   font-family: 'Merriweather', serif;
   font-size:2.1em;
-  line-height:120%;
   margin-bottom:0.4em;
 }
 
-h2,h3{
+h2 {
   font-family: 'Merriweather', serif;
   font-size:1.1em;
   margin-top:0;
   margin-bottom:0;
 }
-
+h3{
+  font-family: 'Merriweather', serif;
+  font-size:1.1em;
+  line-height:1.3em;
+  margin-bottom:0;
+}
 
 nav{
   background-color:#FFF;
   color:#000;
   box-shadow: none;
   -webkit-box-shadow: none;
-  padding-top:10px;
+  padding-top:1rem;
+  padding-bottom:5rem;
+
 }
 nav ul a{
   color:#000;
 }
 .section{
-  padding-top:3.6rem;
+  padding-top:2rem;
+ /* padding-bottom:2rem;*/
+
 }
 a{
   color:#33861E;
@@ -51,13 +60,9 @@ a:hover, a:focus{
 }
 ul{
   margin-top:.5rem;
+  margin-bottom:.5rem;
+  line-height:150%;
 }
-.svg-icon{
+.img-icon{
   padding-right:.5rem;
-  fill:#000;
 }
-/*
-.svg-icon:hover{
-  fill:#33861E;
-}
-*/
