--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,12 @@ a:hover, a:focus{
   color:#707877;
 }
 ul{
-  margin-top:.5rem;
+  margin-top:0;
   margin-bottom:.5rem;
   line-height:150%;
+}
+li{
+  margin-top:.25rem;
 }
 .img-icon{
   padding-right:.5rem;
